--- a/beszel/site/src/locales/ru/translation.json
+++ b/beszel/site/src/locales/ru/translation.json
@@ -1,215 +1,215 @@
 {
-    "all_systems": "Все системы",
-    "filter": "Фильтр...",
-    "copy": "Копировать",
-    "add": "Добавить",
-    "search": "Поиск",
-    "system": "Система",
-    "systems": "Системы",
-    "cancel": "Отмена",
-    "continue": "Продолжить",
-    "minutes_one": "{{count}} минута",
-    "minutes_few": "",
-    "minutes_many": "",
-    "hours_one": "{{count}} час",
-    "hours_few": "{{count}} часа",
-    "hours_many": "{{count}} часов",
-    "days_one": "",
-    "days_few": "",
-    "days_many": "",
-    "weeks_one": "{{count}} неделя",
-    "weeks_few": "",
-    "weeks_many": "",
-    "home": {
-        "active_alerts": "Активные предупреждения",
-        "active_des": "Превышает {{value}}{{unit}} за последние ",
-        "subtitle": "Обновляется в реальном времени. Нажмите на систему для просмотра информации."
-    },
-    "systems_table": {
-        "system": "Система",
-        "memory": "Память",
-        "cpu": "ЦП",
-        "disk": "Диск",
-        "net": "Сеть",
-        "agent": "Агент",
-        "no_systems_found": "Систем не найдено.",
-        "open_menu": "Открыть меню",
-        "resume": "Возобновить",
-        "pause": "Пауза",
-        "copy_host": "Копировать хост",
-        "delete": "Удалить",
-        "delete_confirm": "Вы уверены, что хотите удалить {{name}}?",
-        "delete_confirm_des_1": "Это действие нельзя отменить. Это навсегда удалит все текущие записи для",
-        "delete_confirm_des_2": "из базы данных."
-    },
-    "alerts": {
-        "title": "Предупреждения",
-        "subtitle_1": "См.",
-        "notification_settings": "настройки уведомлений",
-        "subtitle_2": "чтобы настроить, как вы получаете предупреждения.",
-        "overwrite_existing_alerts": "Перезаписать существующие предупреждения",
-        "info": {
-            "status": "Статус",
-            "status_des": "Срабатывает, когда статус переключается между вверх и вниз.",
-            "cpu_usage": "Использование ЦП",
-            "cpu_usage_des": "Срабатывает, когда использование ЦП превышает порог.",
-            "memory_usage": "Использование памяти",
-            "memory_usage_des": "Срабатывает, когда использование памяти превышает порог.",
-            "disk_usage": "Использование диска",
-            "disk_usage_des": "Срабатывает, когда использование любого диска превышает порог.",
-            "bandwidth": "Пропускная способность",
-            "bandwidth_des": "Срабатывает, когда суммарная загрузка/выгрузка превышает порог.",
-            "temperature": "Температура",
-            "temperature_des": "Срабатывает, когда любой датчик превышает порог."
-        },
-        "average_exceeds": "Среднее превышает",
-        "for": "За"
-    },
-    "settings": {
-        "settings": "Настройки",
-        "subtitle": "Управление предпочтениями отображения и уведомлений.",
-        "save_settings": "Сохранить настройки",
-        "export_configuration": "Экспорт конфигурации",
-        "general": {
-            "title": "Общие",
-            "subtitle": "Изменить общие параметры приложения.",
-            "language": {
-                "title": "Язык",
-                "subtitle_1": "Хотите помочь нам улучшить наши переводы? Ознакомьтесь с",
-                "subtitle_2": "для получения дополнительной информации.",
-                "preferred_language": "Предпочитаемый язык"
-            },
-            "chart_options": {
-                "title": "Параметры диаграммы",
-                "subtitle": "Настроить параметры отображения для диаграмм.",
-                "default_time_period": "Период по умолчанию",
-                "default_time_period_des": "Устанавливает диапазон времени по умолчанию для диаграмм при просмотре системы."
-            }
-        },
-        "notifications": {
-            "title": "Уведомления",
-            "subtitle_1": "Настройте, как вы получаете уведомления о предупреждениях.",
-            "subtitle_2": "Ищете, где создать предупреждения? Нажмите на колокольчик",
-            "subtitle_3": "значки в таблице систем.",
-            "email": {
-                "title": "Уведомления по электронной почте",
-                "please": "Пожалуйста",
-                "configure_an_SMTP_server": "настройте SMTP-сервер",
-                "to_ensure_alerts_are_delivered": "чтобы гарантировать доставку предупреждений.",
-                "to_email_s": "На электронную почту(ы)",
-                "enter_email_address": "Введите адрес электронной почты...",
-                "des": "Сохраните адрес, используя клавишу ввода или запятую. Оставьте пустым, чтобы отключить уведомления по электронной почте."
-            },
-            "webhook_push": {
-                "title": "Webhook / Push уведомления",
-                "des_1": "Beszel использует",
-                "des_2": "для интеграции с популярными сервисами уведомлений.",
-                "add_url": "Добавить URL"
-            }
-        },
-        "yaml_config": {
-            "short_title": "YAML Конфиг",
-            "title": "YAML Конфигурация",
-            "subtitle": "Экспорт текущей конфигурации ваших систем.",
-            "des_1": "Системы могут управляться в",
-            "des_2": "файле в вашем каталоге данных.",
-            "des_3": "При каждом перезапуске системы в базе данных будут обновлены, чтобы соответствовать системам, определенным в файле.",
-            "alert": {
-                "title": "Внимание - возможная потеря данных",
-                "des_1": "Существующие системы, не определенные в",
-                "des_2": "будут удалены. Пожалуйста, делайте регулярные резервные копии."
-            }
-        },
-        "language": "Язык"
-    },
-    "user_dm": {
-        "users": "Пользователи",
-        "logs": "Журналы",
-        "backups": "Резервные копии",
-        "auth_providers": "Поставщики аутентификации",
-        "log_out": "Выйти"
-    },
-    "themes": {
-        "toggle_theme": "Переключить тему",
-        "light": "Светлая",
-        "dark": "Темная",
-        "system": "Система"
-    },
-    "add_system": {
-        "add_new_system": "Добавить новую систему",
-        "binary": "Бинарный",
-        "dialog_des_1": "Агент должен работать на системе для подключения. Скопируйте",
-        "dialog_des_2": "для агента ниже.",
-        "name": "Имя",
-        "host_ip": "Хост / IP",
-        "port": "Порт",
-        "key": "Ключ",
-        "click_to_copy": "Нажмите, чтобы скопировать",
-        "command": "команда",
-        "add_system": "Добавить систему"
-    },
-    "command": {
-        "search": "Поиск систем или настроек...",
-        "pages_settings": "Страницы / Настройки",
-        "dashboard": "Панель управления",
-        "documentation": "Документация",
-        "SMTP_settings": "Настройки SMTP",
-        "page": "Страница",
-        "admin": "Админ"
-    },
-    "monitor": {
-        "toggle_grid": "Переключить сетку",
-        "average": "Среднее",
-        "max_1_min": "Макс 1 мин",
-        "total_cpu_usage": "Общее использование ЦП",
-        "cpu_des": "системное использование ЦП",
-        "docker_cpu_usage": "Использование ЦП Docker",
-        "docker_cpu_des": "Среднее использование ЦП контейнеров",
-        "total_memory_usage": "Общее использование памяти",
-        "memory_des": "Точное использование на момент записи",
-        "docker_memory_usage": "Использование памяти Docker",
-        "docker_memory_des": "Использование памяти контейнеров Docker",
-        "disk_space": "Место на диске",
-        "disk_des": "Использование корневого раздела",
-        "disk_io": "Дисковый ввод/вывод",
-        "disk_io_des": "Пропускная способность корневой файловой системы",
-        "bandwidth": "Пропускная способность",
-        "bandwidth_des": "Сетевой трафик публичных интерфейсов",
-        "docker_network_io": "Сетевой ввод/вывод Docker",
-        "docker_network_io_des": "Сетевой трафик контейнеров Docker",
-        "swap_usage": "Использование swap",
-        "swap_des": "Использование swap пространства системой",
-        "temperature": "Температура",
-        "temperature_des": "Температуры датчиков системы",
-        "usage": "Использование",
-        "disk_usage_of": "Использование диска",
-        "throughput_of": "Пропускная способность",
-        "waiting_for": "Ожидание достаточного количества записей для отображения",
-        "cache_buffers": "Кэш/Буферы",
-        "read": "Чтение",
-        "write": "Запись",
-        "sent": "Отправлено",
-        "received": "Получено",
-        "used": "Использовано"
-    },
-    "auth": {
-        "login": "Пожалуйста, войдите в свою учетную запись",
-        "reset": "Введите адрес электронной почты для сброса пароля",
-        "create": "Пожалуйста, создайте учетную запись администратора",
-        "create_account": "Создать учетную запись",
-        "sign_in": "Войти",
-        "openid_des": "Beszel поддерживает OpenID Connect и многих поставщиков аутентификации OAuth2.",
-        "please_view_the": "Пожалуйста, ознакомьтесь с",
-        "for_instructions": "для получения инструкций.",
-        "forgot_password": "Забыли пароль?",
-        "reset_password": "Сбросить пароль",
-        "command_line_instructions": "Инструкции по командной строке",
-        "command_1": "Если вы потеряли пароль от своей учетной записи администратора, вы можете сбросить его, используя следующую команду.",
-        "command_2": "Затем войдите в бэкэнд и сбросьте пароль своей учетной записи пользователя в таблице пользователей."
-    },
-    "clipboard": {
-        "copied": "Скопировано в буфер обмена",
-        "title": "Копировать текст",
-        "des": "Автоматическое копирование требует безопасного контекста."
-    }
+	"add": "Добавить",
+	"add_system": {
+		"add_new_system": "Добавить новую систему",
+		"add_system": "Добавить систему",
+		"binary": "Бинарный",
+		"click_to_copy": "Нажмите, чтобы скопировать",
+		"command": "команда",
+		"dialog_des_1": "Агент должен работать на системе для подключения. Скопируйте",
+		"dialog_des_2": "для агента ниже.",
+		"host_ip": "Хост / IP",
+		"key": "Ключ",
+		"name": "Имя",
+		"port": "Порт"
+	},
+	"alerts": {
+		"average_exceeds": "Среднее превышает",
+		"for": "За",
+		"info": {
+			"bandwidth": "Пропускная способность",
+			"bandwidth_des": "Срабатывает, когда суммарная загрузка/выгрузка превышает порог.",
+			"cpu_usage": "Использование ЦП",
+			"cpu_usage_des": "Срабатывает, когда использование ЦП превышает порог.",
+			"disk_usage": "Использование диска",
+			"disk_usage_des": "Срабатывает, когда использование любого диска превышает порог.",
+			"memory_usage": "Использование памяти",
+			"memory_usage_des": "Срабатывает, когда использование памяти превышает порог.",
+			"status": "Статус",
+			"status_des": "Срабатывает, когда статус переключается между вверх и вниз.",
+			"temperature": "Температура",
+			"temperature_des": "Срабатывает, когда любой датчик превышает порог."
+		},
+		"notification_settings": "настройки уведомлений",
+		"overwrite_existing_alerts": "Перезаписать существующие предупреждения",
+		"subtitle_1": "См.",
+		"subtitle_2": "чтобы настроить, как вы получаете предупреждения.",
+		"title": "Предупреждения"
+	},
+	"all_systems": "Все системы",
+	"auth": {
+		"command_1": "Если вы потеряли пароль от своей учетной записи администратора, вы можете сбросить его, используя следующую команду.",
+		"command_2": "Затем войдите в бэкэнд и сбросьте пароль своей учетной записи пользователя в таблице пользователей.",
+		"command_line_instructions": "Инструкции по командной строке",
+		"create": "Пожалуйста, создайте учетную запись администратора",
+		"create_account": "Создать учетную запись",
+		"for_instructions": "для получения инструкций.",
+		"forgot_password": "Забыли пароль?",
+		"login": "Пожалуйста, войдите в свою учетную запись",
+		"openid_des": "Beszel поддерживает OpenID Connect и многих поставщиков аутентификации OAuth2.",
+		"please_view_the": "Пожалуйста, ознакомьтесь с",
+		"reset": "Введите адрес электронной почты для сброса пароля",
+		"reset_password": "Сбросить пароль",
+		"sign_in": "Войти"
+	},
+	"cancel": "Отмена",
+	"clipboard": {
+		"copied": "Скопировано в буфер обмена",
+		"des": "Автоматическое копирование требует безопасного контекста.",
+		"title": "Копировать текст"
+	},
+	"command": {
+		"SMTP_settings": "Настройки SMTP",
+		"admin": "Админ",
+		"dashboard": "Панель управления",
+		"documentation": "Документация",
+		"page": "Страница",
+		"pages_settings": "Страницы / Настройки",
+		"search": "Поиск систем или настроек..."
+	},
+	"continue": "Продолжить",
+	"copy": "Копировать",
+	"days_few": "",
+	"days_many": "",
+	"days_one": "",
+	"filter": "Фильтр...",
+	"home": {
+		"active_alerts": "Активные предупреждения",
+		"active_des": "Превышает {{value}}{{unit}} за последние ",
+		"subtitle": "Обновляется в реальном времени. Нажмите на систему для просмотра информации."
+	},
+	"hours_few": "{{count}} часа",
+	"hours_many": "{{count}} часов",
+	"hours_one": "{{count}} час",
+	"minutes_few": "",
+	"minutes_many": "",
+	"minutes_one": "{{count}} минута",
+	"monitor": {
+		"average": "Среднее",
+		"bandwidth": "Пропускная способность",
+		"bandwidth_des": "Сетевой трафик публичных интерфейсов",
+		"cache_buffers": "Кэш/Буферы",
+		"cpu_des": "системное использование ЦП",
+		"disk_des": "Использование корневого раздела",
+		"disk_io": "Дисковый ввод/вывод",
+		"disk_io_des": "Пропускная способность корневой файловой системы",
+		"disk_space": "Место на диске",
+		"disk_usage_of": "Использование диска",
+		"docker_cpu_des": "Среднее использование ЦП контейнеров",
+		"docker_cpu_usage": "Использование ЦП Docker",
+		"docker_memory_des": "Использование памяти контейнеров Docker",
+		"docker_memory_usage": "Использование памяти Docker",
+		"docker_network_io": "Сетевой ввод/вывод Docker",
+		"docker_network_io_des": "Сетевой трафик контейнеров Docker",
+		"max_1_min": "Макс 1 мин",
+		"memory_des": "Точное использование на момент записи",
+		"read": "Чтение",
+		"received": "Получено",
+		"sent": "Отправлено",
+		"swap_des": "Использование swap пространства системой",
+		"swap_usage": "Использование swap",
+		"temperature": "Температура",
+		"temperature_des": "Температуры датчиков системы",
+		"throughput_of": "Пропускная способность",
+		"toggle_grid": "Переключить сетку",
+		"total_cpu_usage": "Общее использование ЦП",
+		"total_memory_usage": "Общее использование памяти",
+		"usage": "Использование",
+		"used": "Использовано",
+		"waiting_for": "Ожидание достаточного количества записей для отображения",
+		"write": "Запись"
+	},
+	"search": "Поиск",
+	"settings": {
+		"export_configuration": "Экспорт конфигурации",
+		"general": {
+			"chart_options": {
+				"default_time_period": "Период по умолчанию",
+				"default_time_period_des": "Устанавливает диапазон времени по умолчанию для диаграмм при просмотре системы.",
+				"subtitle": "Настроить параметры отображения для диаграмм.",
+				"title": "Параметры диаграммы"
+			},
+			"language": {
+				"preferred_language": "Предпочитаемый язык",
+				"subtitle_1": "Хотите помочь нам улучшить наши переводы? Ознакомьтесь с",
+				"subtitle_2": "для получения дополнительной информации.",
+				"title": "Язык"
+			},
+			"subtitle": "Изменить общие параметры приложения.",
+			"title": "Общие"
+		},
+		"language": "Язык",
+		"notifications": {
+			"email": {
+				"configure_an_SMTP_server": "настройте SMTP-сервер",
+				"des": "Сохраните адрес, используя клавишу ввода или запятую. Оставьте пустым, чтобы отключить уведомления по электронной почте.",
+				"enter_email_address": "Введите адрес электронной почты...",
+				"please": "Пожалуйста",
+				"title": "Уведомления по электронной почте",
+				"to_email_s": "На электронную почту(ы)",
+				"to_ensure_alerts_are_delivered": "чтобы гарантировать доставку предупреждений."
+			},
+			"subtitle_1": "Настройте, как вы получаете уведомления о предупреждениях.",
+			"subtitle_2": "Ищете, где создать предупреждения? Нажмите на колокольчик",
+			"subtitle_3": "значки в таблице систем.",
+			"title": "Уведомления",
+			"webhook_push": {
+				"add_url": "Добавить URL",
+				"des_1": "Beszel использует",
+				"des_2": "для интеграции с популярными сервисами уведомлений.",
+				"title": "Webhook / Push уведомления"
+			}
+		},
+		"save_settings": "Сохранить настройки",
+		"settings": "Настройки",
+		"subtitle": "Управление предпочтениями отображения и уведомлений.",
+		"yaml_config": {
+			"alert": {
+				"des_1": "Существующие системы, не определенные в",
+				"des_2": "будут удалены. Пожалуйста, делайте регулярные резервные копии.",
+				"title": "Внимание - возможная потеря данных"
+			},
+			"des_1": "Системы могут управляться в",
+			"des_2": "файле в вашем каталоге данных.",
+			"des_3": "При каждом перезапуске системы в базе данных будут обновлены, чтобы соответствовать системам, определенным в файле.",
+			"short_title": "YAML Конфиг",
+			"subtitle": "Экспорт текущей конфигурации ваших систем.",
+			"title": "YAML Конфигурация"
+		}
+	},
+	"system": "Система",
+	"systems": "Системы",
+	"systems_table": {
+		"agent": "Агент",
+		"copy_host": "Копировать хост",
+		"cpu": "ЦП",
+		"delete": "Удалить",
+		"delete_confirm": "Вы уверены, что хотите удалить {{name}}?",
+		"delete_confirm_des_1": "Это действие нельзя отменить. Это навсегда удалит все текущие записи для",
+		"delete_confirm_des_2": "из базы данных.",
+		"disk": "Диск",
+		"memory": "Память",
+		"net": "Сеть",
+		"no_systems_found": "Систем не найдено.",
+		"open_menu": "Открыть меню",
+		"pause": "Пауза",
+		"resume": "Возобновить",
+		"system": "Система"
+	},
+	"themes": {
+		"dark": "Темная",
+		"light": "Светлая",
+		"system": "Система",
+		"toggle_theme": "Переключить тему"
+	},
+	"user_dm": {
+		"auth_providers": "Поставщики аутентификации",
+		"backups": "Резервные копии",
+		"log_out": "Выйти",
+		"logs": "Журналы",
+		"users": "Пользователи"
+	},
+	"weeks_few": "",
+	"weeks_many": "",
+	"weeks_one": "{{count}} неделя"
 }
