--- a/beszel/site/src/locales/ar/translation.json
+++ b/beszel/site/src/locales/ar/translation.json
@@ -75,6 +75,7 @@
 	"days_other": "{{count}} أيام",
 	"days_two": "{{count}} يومان",
 	"days_zero": "٠ أيام",
+	"error": "خطأ",
 	"filter": "تصفية...",
 	"home": {
 		"active_alerts": "التنبيهات النشطة",
@@ -130,7 +131,9 @@
 	},
 	"search": "بحث",
 	"settings": {
+		"check_logs": "راجع السجلات لمزيد من التفاصيل",
 		"export_configuration": "تصدير الإعدادات",
+		"failed_to_save": "فشل في حفظ الإعدادات",
 		"general": {
 			"chart_options": {
 				"default_time_period": "الفترة الزمنية الافتراضية",
@@ -155,21 +158,26 @@
 				"enter_email_address": "أدخل عنوان البريد الإلكتروني...",
 				"please": "الرجاء",
 				"title": "إشعارات البريد الإلكتروني",
-				"to_email_s": "إلى البريد الإلكتروني",
+				"to_emails": "إلى البريد الإلكتروني",
 				"to_ensure_alerts_are_delivered": "لضمان تسليم التنبيهات."
 			},
 			"subtitle_1": "تكوين كيفية استلام إشعارات التنبيه.",
 			"subtitle_2": "هل تبحث عن مكان إنشاء التنبيهات؟ انقر على رمز الجرس",
 			"subtitle_3": "في جدول الأنظمة.",
 			"title": "الإشعارات",
-			"webhook_push": {
-				"add_url": "إضافة URL",
+			"webhook": {
+				"add": "إضافة",
 				"des_1": "يستخدم Beszel",
-				"des_2": "للتكامل مع خدمات الإشعارات الشائعة.",
+				"des_2": "للتكامل مع خدمات الإشعارات الشائعة",
+				"test": "اختبار",
+				"test_sent": "تم إرسال إشعار الاختبار",
+				"test_sent_des": "تحقق من خدمة الإشعارات الخاصة بك",
 				"title": "إشعارات Webhook / Push"
 			}
 		},
 		"save_settings": "حفظ الإعدادات",
+		"saved": "تم حفظ الإعدادات",
+		"saved_des": "تم تحديث إعدادات المستخدم الخاصة بك",
 		"settings": "الإعدادات",
 		"subtitle": "إدارة تفضيلات العرض والإشعارات.",
 		"yaml_config": {
