--- a/beszel/site/src/locales/ru/translation.json
+++ b/beszel/site/src/locales/ru/translation.json
@@ -72,6 +72,7 @@
 	"days_few": "",
 	"days_many": "",
 	"days_one": "",
+	"error": "Ошибка",
 	"filter": "Фильтр...",
 	"home": {
 		"active_alerts": "Активные предупреждения",
@@ -121,7 +122,9 @@
 	},
 	"search": "Поиск",
 	"settings": {
+		"check_logs": "Проверьте журналы для получения дополнительной информации",
 		"export_configuration": "Экспорт конфигурации",
+		"failed_to_save": "Не удалось сохранить настройки",
 		"general": {
 			"chart_options": {
 				"default_time_period": "Период по умолчанию",
@@ -146,21 +149,26 @@
 				"enter_email_address": "Введите адрес электронной почты...",
 				"please": "Пожалуйста",
 				"title": "Уведомления по электронной почте",
-				"to_email_s": "На электронную почту(ы)",
+				"to_emails": "На электронную почту(ы)",
 				"to_ensure_alerts_are_delivered": "чтобы гарантировать доставку предупреждений."
 			},
 			"subtitle_1": "Настройте, как вы получаете уведомления о предупреждениях.",
 			"subtitle_2": "Ищете, где создать предупреждения? Нажмите на колокольчик",
 			"subtitle_3": "значки в таблице систем.",
 			"title": "Уведомления",
-			"webhook_push": {
-				"add_url": "Добавить URL",
+			"webhook": {
+				"add": "Добавить",
 				"des_1": "Beszel использует",
-				"des_2": "для интеграции с популярными сервисами уведомлений.",
+				"des_2": "для интеграции с популярными сервисами уведомлений",
+				"test": "Тестировать",
+				"test_sent": "Тестовое уведомление отправлено",
+				"test_sent_des": "Проверьте ваш сервис уведомлений",
 				"title": "Webhook / Push уведомления"
 			}
 		},
 		"save_settings": "Сохранить настройки",
+		"saved": "Настройки сохранены",
+		"saved_des": "Ваши пользовательские настройки были обновлены",
 		"settings": "Настройки",
 		"subtitle": "Управление предпочтениями отображения и уведомлений.",
 		"yaml_config": {
