--- a/beszel/site/src/locales/uk/translation.json
+++ b/beszel/site/src/locales/uk/translation.json
@@ -72,6 +72,7 @@
 	"days_few": "{{count}} дні",
 	"days_many": "{{count}} днів",
 	"days_one": "{{count}} день",
+	"error": "Помилка",
 	"filter": "Фільтр...",
 	"home": {
 		"active_alerts": "Активні сповіщення",
@@ -121,7 +122,9 @@
 	},
 	"search": "Пошук",
 	"settings": {
+		"check_logs": "Перевірте журнали для отримання додаткової інформації",
 		"export_configuration": "Експорт конфігурації",
+		"failed_to_save": "Не вдалося зберегти налаштування",
 		"general": {
 			"chart_options": {
 				"default_time_period": "Стандартний період часу",
@@ -146,21 +149,26 @@
 				"enter_email_address": "Введіть email адресу...",
 				"please": "Будь ласка",
 				"title": "Сповіщення електронною поштою",
-				"to_email_s": "На email(и)",
+				"to_emails": "На email(и)",
 				"to_ensure_alerts_are_delivered": "щоб забезпечити доставку сповіщень."
 			},
 			"subtitle_1": "Налаштуйте спосіб отримання сповіщень.",
 			"subtitle_2": "Шукаєте де створити сповіщення? Натисніть на значок дзвінка",
 			"subtitle_3": "в таблиці систем.",
 			"title": "Сповіщення",
-			"webhook_push": {
-				"add_url": "Додати URL",
+			"webhook": {
+				"add": "Додати",
 				"des_1": "Beszel використовує",
-				"des_2": "для інтеграції з популярними сервісами сповіщень.",
+				"des_2": "для інтеграції з популярними сервісами сповіщень",
+				"test": "Тестувати",
+				"test_sent": "Тестове сповіщення надіслано",
+				"test_sent_des": "Перевірте ваш сервіс сповіщень",
 				"title": "Webhook / Push сповіщення"
 			}
 		},
 		"save_settings": "Зберегти налаштування",
+		"saved": "Налаштування збережено",
+		"saved_des": "Ваші налаштування користувача оновлено",
 		"settings": "Налаштування",
 		"subtitle": "Керування налаштуваннями відображення та сповіщень.",
 		"yaml_config": {
