--- a/beszel/site/src/locales/zh-CN/translation.json
+++ b/beszel/site/src/locales/zh-CN/translation.json
@@ -70,6 +70,7 @@
 	"continue": "继续",
 	"copy": "复制",
 	"days_other": "{{count}} 天",
+	"error": "错误",
 	"filter": "筛选...",
 	"home": {
 		"active_alerts": "活动警报",
@@ -115,7 +116,9 @@
 	},
 	"search": "搜索",
 	"settings": {
+		"check_logs": "查看日志以获取更多详细信息",
 		"export_configuration": "导出配置",
+		"failed_to_save": "保存设置失败",
 		"general": {
 			"chart_options": {
 				"default_time_period": "默认时间段",
@@ -140,21 +143,26 @@
 				"enter_email_address": "输入邮箱地址...",
 				"please": "配置",
 				"title": "电子邮件通知",
-				"to_email_s": "收件人邮箱",
+				"to_emails": "收件人邮箱",
 				"to_ensure_alerts_are_delivered": "以确保邮件可以成功发送。"
 			},
 			"subtitle_1": "设置如何接收警报通知。",
 			"subtitle_2": "正在寻找创建警报的位置？点击服务器列表中的",
 			"subtitle_3": "图标。",
 			"title": "通知",
-			"webhook_push": {
-				"add_url": "添加 URL",
+			"webhook": {
+				"add": "添加",
 				"des_1": "Beszel 使用",
-				"des_2": "与流行的通知服务集成。",
+				"des_2": "与流行的通知服务集成",
+				"test": "测试",
+				"test_sent": "测试通知已发送",
+				"test_sent_des": "请检查您的通知服务",
 				"title": "Webhook / 推送通知"
 			}
 		},
 		"save_settings": "保存设置",
+		"saved": "设置已保存",
+		"saved_des": "您的用户设置已更新",
 		"settings": "设置",
 		"subtitle": "管理显示和通知偏好。",
 		"yaml_config": {
